--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -18,7 +18,7 @@
             <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> <!-- New line -->
         </div>
         <div>
-            <img src="/media/cat.jpg" alt="Picture of a Cat" />
+            <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat."/>
         </div>
     </body>
-</html>
+</html>  
