--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
-
+{% extends 'rango/base.html' %}
 {% load staticfiles %} <!-- New line -->
 
 <html>
-    <head>
-        <title>Rango</title>
-    </head>
+    {% block title_block %}
+        About Rango
+    {% endblock %}
 
-    <body>
-        <h1>Rango says...</h1>
+
+    {% block body_block %}
+        here is the about page.
+        <p>This tutorial has been put together by <strong>Oskar Kerr</strong></p>
         <div>
-            here is the about page. <br />
-            <p>This tutorial has been put together by <strong>Oskar Kerr</strong></p>
-        </div>
-        <div>
-            <a href="/rango/">Index</a><br />
             <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> <!-- New line -->
         </div>
         <div>
             <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat."/>
         </div>
-    </body>
-</html>  
+    {% endblock %}
