--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
-
+{% extends 'rango/base.html' %}
 {% load staticfiles %} <!-- New line -->
 
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% block title_block %}
+    Homepage
+{% endblock %}
+{% block body_block %}
+        hey there partner! <br />
+        <strong>{{ boldmessage }}</strong><br />
 
-    <body>
-        <h1>Rango says...</h1>
-        <div>
-            hey there partner! <br />
-            <strong>{{ boldmessage }}</strong><br />
-        </div>
         <div>
         {%if categories %}
         <h2>Most Liked Categories</h2>
@@ -20,7 +16,11 @@
             {% for category in categories %}
                 
                 <!-- The following line is changed to add an HTML hyperlink -->
-                <li><a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a></li>
+                <li>
+                    <a href="{% url 'rango:show_category' category.slug %}">
+                    {{ category.name }}
+                    </a>
+                </li>
                 
             {% endfor %}
         </ul>
@@ -44,9 +44,6 @@
         </div>
 
         <div>
-            <a href="/rango/about/">About Rango</a><br />
-            <a href="/rango/add_category/">Add a New Category</a><br />
             <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> <!-- New line -->
         </div>
-    </body>
-</html>
+{% endblock %}
