--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 {% extends 'rango/base.html' %}
 {% load staticfiles %}
+{% load rango_template_tags %}
 
 {% block title_block %}
     {% if category %}
@@ -22,8 +23,12 @@
     {% else %}
         <strong>No pages currently in category.</strong>
     {% endif %}
-
+{% if user.is_authenticated %}
     <a href="{% url 'rango:add_page' category.slug %}">Add Page</a> <br />
+{%else%}
+    <strong>Login required to add a page</strong>
+{%endif%}
+    
     {% else %}
     The specified category does not exist.
     {% endif %}
