--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -6,44 +6,49 @@
     Homepage
 {% endblock %}
 {% block body_block %}
-        hey there partner! <br />
-        <strong>{{ boldmessage }}</strong><br />
+    {% if user.is_authenticated %}
+    howdy {{ user.username }}!
+    {% else %}
+    hey there partner!
+    {% endif %}
+    <br />
+    <strong>{{ boldmessage }}</strong><br />
 
-        <div>
-        {%if categories %}
-        <h2>Most Liked Categories</h2>
+    <div>
+    {%if categories %}
+    <h2>Most Liked Categories</h2>
+    <ul>
+        {% for category in categories %}
+            
+            <!-- The following line is changed to add an HTML hyperlink -->
+            <li>
+                <a href="{% url 'rango:show_category' category.slug %}">
+                {{ category.name }}
+                </a>
+            </li>
+            
+        {% endfor %}
+    </ul>
+    {% else %}
+        <strong>There are no categories present.</strong>
+    {% endif %}
+    </div>
+    <div>
+    {% if pages %}
+    <h2>Most Viewed Pages</h2>
         <ul>
-            {% for category in categories %}
-                
-                <!-- The following line is changed to add an HTML hyperlink -->
-                <li>
-                    <a href="{% url 'rango:show_category' category.slug %}">
-                    {{ category.name }}
-                    </a>
-                </li>
-                
-            {% endfor %}
+        {% for page in pages %}
+            <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+        {% endfor %}
         </ul>
-        {% else %}
-            <strong>There are no categories present.</strong>
-        {% endif %}
-        </div>
-        <div>
-        {% if pages %}
-        <h2>Most Viewed Pages</h2>
-            <ul>
-            {% for page in pages %}
-                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-            {% endfor %}
-            </ul>
-        {% else %}
-            <strong>There are no pages present.</strong>
-        {% endif %}
+    {% else %}
+        <strong>There are no pages present.</strong>
+    {% endif %}
 
 
-        </div>
+    </div>
 
-        <div>
-            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> <!-- New line -->
-        </div>
+    <div>
+        <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> <!-- New line -->
+    </div>
 {% endblock %}
