--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -10,6 +10,7 @@
 
     {% block body_block %}
         here is the about page.
+        <p>Visits: {{ visits }}</p>
         <p>This tutorial has been put together by <strong>Oskar Kerr</strong></p>
         <div>
             <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" /> <!-- New line -->
